fix to parent process name value

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "xdg-open-browser",
-  "version": "1.0.0",
-  "description": "A wrapper script around xdg-open allowing for setting up the rules what browser should links be opened in",
-  "license": "UNLICENSED",
+  "version": "1.0.1",
+  "description": "A script sitting in front of xdg-open allowing for setting up the rules what browser should links be opened in based on application/process that requested url to be opened",
+  "license": "Unlicense",
   "author": "Cotko <cotko@gmail.com>",
   "type": "commonjs",
-  "main": "xdg-open-browser"
+  "main": "./xdg-open-browser",
+  "repository": "https://github.com/cotko/xdg-open-browser"
 }
